# msggenerator

./: CMakeLists.txt  Makefile  main.cpp  msg.h
